Final Assessment: A thread can now be reserved for the downloading of Annovar databases, without causing other rules to wait for more avaliable threads, until all databases are downloaded. This option can be configured in config.yaml.

--- a/diagnostic-genome-analysis/config.yaml
+++ b/diagnostic-genome-analysis/config.yaml
@@ -39,3 +39,6 @@ annovar_dbs:
   clinvar_20190305:
     file: clinvar_20190305.txt
     operation: f
+
+# MULTITHREADING
+reserve_annovar_db_thread: 0
